# datalad-getexec

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  requirements-devel.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  docbuild.yml  fast_check.yml  test_crippledfs.yml  tox.yml  tox_scheduled.yml
datalad_getexec/: __init__.py  conftest.py  getexec.py  hello_cmd.py  remote.py
datalad_getexec/tests/: test_getexec.py  test_register.py
docs/: Makefile
docs/source/: conf.py  index.rst
src/datalad_getexec/: _version.py  compat.py  getexec.py  remote.py  spec.py  utils.py
tests/: conftest.py  test_compat.py  test_getexec.py  test_register.py  test_spec.py  test_utils.py
tests/resources/: write_bytes.py
