[build-system]
requires = ["setuptools >= 43.0.0", "wheel"]

[tool.black]
line-length = 88
extend-exclude = '''
(
  ^/_datalad_buildsupport
  | ^/versioneer.py
  | ^/datalad_getexec/_version.py
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip = [
  "_datalad_buildsupport/",
  "versioneer.py",
  "datalad_getexec/_version.py",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  '_build/',
  'build/',
]

# [tool.flake8]
# flake8 still does not support pyproject.toml, so it's configured in .flake8
