[metadata]
url = https://github.com/matrss/datalad-getexec
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension for code execution in get commands
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
install_requires =
    datalad >= 0.17.0
    annexremote >= 1.6.0
include_package_data = True

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    pytest
    coverage

[options.entry_points]
# 'datalad.extensions' is THE entrypoint inspected by the datalad API builders
datalad.extensions =
    # the label in front of '=' is the command suite label
    # the entrypoint can point to any symbol of any name, as long it is
    # valid datalad interface specification (see demo in this extensions)
    getexec = datalad_getexec:command_suite
console_scripts =
    git-annex-remote-getexec = datalad_getexec.remote:main

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = src/datalad_getexec/_version.py
versionfile_build = datalad_getexec/_version.py
tag_prefix =
parentdir_prefix =

[coverage:run]
plugins =
  coverage_conditional_plugin

[coverage:report]
show_missing = True
omit =
    # versioneer code
    src/datalad_getexec/_version.py

[coverage:coverage_conditional_plugin]
rules =
  "sys_version_info >= (3, 9)": py-gte-39
  "sys_version_info < (3, 9)": py-lt-39
